--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,13 @@
         "use": "@vercel/node"
       }
     ],
-    "routes": [{ "src": "/(.*)", "dest": "src/index.ts"}],
+    "routes": [
+      { 
+        "src": "/(.*)", "dest": "src/index.ts"
+      }
+    ],
     "env": {
       "MONGO_URI": "@mongo_uri"
     }
-  }
+}
   
