--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "src/index.ts",
-        "use": "@vercel/node"
-      }
-    ],
+    "functions": {
+    "api/*.js": {
+      "runtime": "nodejs20.x"
+    }
+  },
     "routes": [
       { 
         "src": "/(.*)", "dest": "src/index.ts"
